clang/test/BSC/Negative/NullabilityCheck/return_nullable/return_nullable.cbs
// RUN: %clang_cc1 -verify %s

_Safe int *_Borrow foo1(int *_Borrow _Nullable a) {
    return a;             // expected-error{{cannot return nullable pointer type}}
}
